--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Modified Document</title>
 </head>
 <body>
-    
+    <h1>Welcome to My Website</h1>
+    <p>This is a modified HTML document.</p> 
 </body>
 </html>
