--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
+    <link rel="stylesheet" href="c.css">
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
 </head>
+<h1> The things i want to do</h1>
+
 <body>
-    
+    <p> 
+something
+
+    </p>
+
+
 </body>
+
+
+
+
+
 </html>
