--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-  <h1 style="color:blue">Welcome to CS department</h1>  
+  <h1>Welcome to CS department</h1>  
 </body>
 </html>
