--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My Name</title>
+    <link rel="stylesheet" href="index.css" />
 </head>
+
 <body>
-    
+    <h1 id="heading">kueth Gatwech</h1>
 </body>
+
 </html>
+
+#heading {
+background-color: brown;
+color: blue;
+text-align: center;
+}
