this is sample of web

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Welcome to My Web Page</h1>
+    <p>This is a sample paragraph.</p>
+    <img src="image.jpg" alt="Sample Image">
+    <a href="https://www.example.com">Visit Example.com</a>
 </body>
 </html>
