--- a/index.html
+++ b/index.html
@@ -9,13 +9,7 @@
 </head>
 
 <body>
-    <h1 id="heading">kueth Gatwech</h1>
+    <h1 class="test">kueth Gatwech</h1>
 </body>
 
 </html>
-
-#heading {
-background-color: brown;
-color: blue;
-text-align: center;
-}
