--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
- <h1>Document from Xulkif</h1>   
+ <h1>Document from zulkif</h1>
+ <h2>by using html and  css</h2>   
 </body>
 </html>
