--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     webdevelopment<input type="checkbox"><br>
     mobilecomputing <input type="checkbox"> <br>
 <input type="submit"  class="submit">
+<input type="reset" class="reset">
 </div>
     </p>
     </div>
