--- a/index.html
+++ b/index.html
@@ -1,68 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/index.css">
-    <title>day 2</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="./css/registrationStyle.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script type="text/javascript" src="./Js/registrationJs"></script>
 </head>
-
 <body>
-    <main>
-        <section class="menu">
-            <nav>
-                <a href="#" class="close-btn"><img src="./css/img/Enabled.svg" alt="close btn"></a>
-                <div>
-                    <ul>
+    
+    <form class="container" action="./backend/process_registration.php" method="post">
+        <h2 class="heading">Sign Up</h2>
+        <div class="steps-container">
+            <hr>
+            <hr class="active">
+            <div class="steps"><i class="fa-solid fa-user"></i></div>
+            <div class="steps"><i class="fa-solid fa-envelope"></i></div>
+            <div class="steps"><i class="fa-solid fa-key"></i></div>
+            <div class="steps"><i class="fa-solid fa-trophy"></i></div>
+        </div>
+    
+        <div class="input-slide-contianer">
+            <scroller class="scro">
+                <div class="input-slide">
+                <h3>User Name</h3>
+                <p><i>Username is your online identity</i></p>
+                <ul class="rules">
+                    <li>Your username should only contain letters, numbers, underscores or hyphens. </li><li>No spaces or special characters allowed.</li>
+                    <li>Your username should not be offensive or contain profanity.</li>
+                </ul>
+                <input type="text" placeholder="Type your username Here" name="username" class="username">
+                <div class="full-name"><input type="text" placeholder="First Name" name="firstname">
+                <input type="text" name="lastname" class="lastname" placeholder="Last Name"></div>
+                <button class="button-nex" onclick="NextSlide(1)">Next</button>
+            </div>
+            <div class="input-slide user-detail">
+                <h3>Email</h3>
+                <p><i>Email is the gateway to your digital life</i></p>
+                <ul class="rules">
+                    <li>Please enter valid email in the format "example@example.com".</li>
+                    <li>we value your privacy and will never use your email for any unauthorized purposes.</li>
+                    <li>Please don't use email that belong to someone else.</li>
+                    <li>Please don't use email that includes personal information.</li>
+                </ul>
+                <input type="email" name="email" class="email" placeholder="Email">     
+                <button class="button-nex" onclick="NextSlide(2)">Next</button>
+            </div>
+            <div class="input-slide password-slide">
+                <h3>Password</h3>
+                <p><i>Secure your account with a strong password</i></p>
+                <ul class="rules">
+                    <li>Include a mix of uppercase and lowercase letters, numbers, and special characters.</li>
+                    <li>Avoid using common or easily guessable passwords.</li>
+                    <li>Do not use personal information.</li>
+                </ul>
+                <input type="password" name="password" class="password" placeholder="Password">
+                <input type="password" name="confirm-password" class="confirm-password" placeholder="Confirm Your Password">
+                <button class="button-nex" onclick="NextSlide(3)">Next</button>
+            </div>
+            <div class="input-slide finish-slide">
+                <h3>Congratulations!</h3>
+                <p><i>You have completed all the steps required for registration.</i></p>
+                <ul class="rules">
+                <li>Before submitting your information, please take a moment to ensure that all the details provided are correct. </li>
+                <li> We take the privacy and security of our users very seriously, and it is important that all the information provided is accurate and up-to-date.</li> 
+                <li>Once you have confirmed that everything is in order, simply click the 'Submit' button.</li>
+                </ul> 
+                <button type="submit" class="button-nex" >Sumbit</button>
+            </div>
+        </scroller> 
+        </div>
+      <button class="GoBack" onclick="GoBack()"><i class="fa-solid fa-arrow-left"></i></button> 
+    </form>
 
-                        <li class="menu-list"><a href="#portfolio"> Portifolio</a></li>
-                        <li class="menu-list"><a href="#about">About</a></li>
-                        <li class="menu-list"><a href="#contactus">contact us</a></li>
-                    </ul>
-                </div>
-            </nav>
-        </section>
-    </main>
-    <section class="flex-container">
-        <div class="headline-container ">
-            <h1> Benawi Alemayehu</h1>
-            <h2 class="headline-container-pos">I am a software Engineer</h2>
-        </div>
-        <div class="headline-container-para">
-            <p> I can help you build a product , feature or website Look through some of my work and experience! If you
-                like what you see and have a project you need coded,
-                don’t hesitate to contact me.</p>
-        </div>
-        <div>
-            <a href="https://benawi.github.com" target="_blank" rel="noopener">
-                <svg width="20" height="21"  viewBox="0 0 20 21" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                        d="M19.7587 1.27945C19.4253 0.888413 18.8587 0.790654 18.4253 1.08393L16.492 2.38738C15.592 1.44238 14.3253 0.920999 12.9587 0.920999C10.2587 0.920999 8.02532 3.07169 8.02532 5.74377C8.02532 6.1348 8.05865 6.49325 8.15865 6.8517C5.82532 6.36291 4.42532 4.70101 3.89198 1.70307C3.82532 1.31203 3.52532 1.01876 3.12532 0.920999C2.75865 0.82324 2.35865 0.986171 2.12532 1.27945C2.05865 1.34462 -3.44135 8.83946 4.52532 15.1938C3.75865 16.7905 1.45865 18.1591 0.558651 18.6153C0.125318 18.8109 -0.0746825 19.2671 0.0253175 19.7233C0.125318 20.1795 0.525318 20.4728 0.991984 20.4728H2.72532C12.8587 20.4728 17.4587 15.5522 17.5587 4.53808L19.6587 2.5829C20.0587 2.25704 20.092 1.67048 19.7587 1.27945Z"
-                        fill="#505F79"  />
-                </svg>
-
-            </a>
-            <a href="https://www.linkedin.com/in/habtamualemayehu/" rel="noopener">
-                <svg width="20" height="21" viewBox="0 0 20 21" fill="none" xmlns="https://www.w3.org/2000/svg">
-                    <path
-                        d="M13.6444 3.86914C10.1556 3.86914 7.28857 6.64258 7.28857 10.0925V19.8333C7.28857 20.2054 7.59946 20.5098 7.97942 20.5098H11.5718C11.9518 20.5098 12.2627 20.2054 12.2627 19.8333V10.363C12.2627 9.61895 12.8844 9.01014 13.6444 9.01014C14.4043 9.01014 15.0261 9.61895 15.0261 10.363V19.8333C15.0261 20.2054 15.3369 20.5098 15.7169 20.5098H19.3093C19.6893 20.5098 20.0001 20.2054 20.0001 19.8333V10.0925C20.0001 6.6764 17.1677 3.86914 13.6444 3.86914Z"
-                        fill="#505F79" />
-                    <path
-                        d="M2.48705 0.892578C1.10535 0.892578 0 1.97472 0 3.32741C0 4.68009 1.10535 5.76224 2.48705 5.76224C3.86874 5.76224 4.97409 4.68009 4.97409 3.32741C4.97409 1.97472 3.86874 0.892578 2.48705 0.892578Z"
-                        fill="#505F79" />
-                    <path
-                        d="M4.28325 7.04785H0.690846C0.310881 7.04785 0 7.35225 0 7.7243V19.8327C0 20.2048 0.310881 20.5092 0.690846 20.5092H4.28325C4.66321 20.5092 4.97409 20.2048 4.97409 19.8327V7.7243C4.97409 7.35225 4.66321 7.04785 4.28325 7.04785Z"
-                        fill="#505F79" />
-                </svg>
-            </a>
-        </div>
-        <div class="headline action">
-            <a class="action-btn" href="#" title="Display next section">
-              <div class="chevron"></div>
-            </a>
-          </div>
-    </section>
 </body>
-
 </html>
